--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <title>Lotto</title>
 </head>
 <body>
-Hello World!!
+<div class="col-md-12">
+    <a href="list">로또 이력 조회</a>
+</div>
+<div class="col-md-12">
+    <a href="purchase">로또 구매</a>
+</div>
 </body>
 </html>
