[로또 - 웹, DB] 던 미션 제출합니다. (#80)
* docs: Add readme.md

* feat: Add LottoNumber class

* feat: Add Lotto class and match method to match lotto numbers

* feat: Add LottoGenerator class

- Add LottoNumber comparable
- Add create method

* feat: Add LottoGeneratingStrategy interface

- Add RandomLottoGeneratingStrategy class
- Add MockLottoGeneratingStrategy class

* feat: Add LottoTickets class

- generate lotto tickets by the amount paid

* feat: Add Payment class

* feat: Add Rank enum

* feat: Add Result class

* feat: Add exception handling

* feat: Calculate earnings rate

- Calculate total winning money

* refactor: Replace for statements with stream

* feat: Add BonusNumber class

* feat: Add fifth rank and modify second rank

- modify valueOf method to check bonus number

* feat: Add WinningLotto class

- Add produceResult method to produce result

* feat: Add OutputView class

- Add Lotto tickets print method
- Add Lotto result print method
- Add Lotto earnings rate print method

* fix: Change primitive type of totalWinningMoney

- Fix produceResultForEachTicket method logic

* refactor: Add LottoRepository class to divide responsibility of generating lotto

- modify LottoTickets class

* refactor: modify ManualLottoGeneratingStrategy constructor to use polymorphism

* feat: Add console controller

* feat: Add CountOfLotto class

* feat: Add InputView class

* refactor: replace for statement with stream

* feat: Add custom exception class

* refactor: Modify Result class constructor

* refactor: constant

* feat: Add CountOfLotto test

* feat: Add domain test and add lotto package

* refactor: Optimize import statement

* refactor: Replace Payment and CountOfLotto constructor parameter type to String

* refactor: Add final tag to member variable and test

* refactor: Move calculateTotalWinningMoney method from Rank class to Result class

* refactor: Replace Lotto constructor 

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -9,11 +9,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>로또</title>
 </head>
 <body>
-<a href="inputStep1.html" class="btn btn-primary">로또 구매하기</a>
-<a href="selectPage.html" class="btn btn-primary">조회하기</a>
+<blockquote class="blockquote">
+    {{#lottos}}
+    <p class="mb-0">{{lotto}}</p>
+    {{/lottos}}
+
+    {{#result}}
+    <p class="mb-0">{{countOfMatch}}개 일치 ({{winningMoney}}) - {{lottoScore}}개</p>
+    {{/result}}
+
+    <p class="mb-0">총 수익률은 {{earningsRate}}입니다.</p>
+</blockquote>
+
+<script type="text/javascript">
+
+</script>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
