--- a/src/main/resources/templates/inputStep1.html
+++ b/src/main/resources/templates/inputStep1.html
@@ -9,11 +9,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>로또</title>
 </head>
 <body>
-<a href="inputStep1.html" class="btn btn-primary">로또 구매하기</a>
-<a href="selectPage.html" class="btn btn-primary">조회하기</a>
+<form action="inputStep2.html" method="post">
+    <div class="form-group">
+        <label for="inputPayment">{{paymentMessage}}</label>
+        <input type="text" class="form-control" id="inputPayment" aria-describedby="emailHelp" placeholder="구입 금액"
+               name="payment">
+        <small id="paymentHelp" class="form-text text-muted">로또 하나당 가격은 {{lottoPrice}}원 입니다</small>
+    </div>
+    <div class="form-group">
+        <label for="inputCountOfManualLotto">{{countOfManualLottoMessage}}</label>
+        <input type="text" class="form-control" id="inputCountOfManualLotto" placeholder="개수" name="countOfManualLotto">
+        <small id="countOfManualLottoHelp" class="form-text text-muted">총 로또개수 이하의 숫자를 입력하세요</small>
+    </div>
+
+    <button type="submit" class="btn btn-primary">다음</button>
+</form>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
