[로또(웹/DB)] 희봉 미션 제출합니다. (#51)
* docs README 추가

* feat 로또 번호 한개를 의미하는 LottoNumber 객체 생성

- 1 ~ 45 사이만 가능

* feat 로또 생성시 기본이 되는 LottoGenerateBase 객체 생성

- List<LottoNumber> 필드
- 1 ~ 45 가지고 있음

* feat Lotto class 생성

- List<LottoNumber> 필드로 가짐
- 개수 체크

* feat 구입금액 추가

- main 및 InputView 생성

* feat 수동 구매 개수 입력 추가

- main, InputView 변경

* feat 몇장을 구매했는지 보여주는 OutputView 생성

* feat InputView에 수동 로또 입력 추가

* feat 수동 번호 입력 추가

- Lottoeries class 추가
- main, input 추가

* feat 자동 로또 번호 생성

* feat 자동 로또 생성 및 출력 추가

* refactor 출력 순서 변경

* feat Lotto class 의 custom() 함수와 create() 함수를 인터페이스로 분리 및 DefaultCustomLotto, DefaultCreateLotto, MockCreaetLotto 생성

- Lotto에서 사용자가 입력한 방식으로 만드는 custom() 함수와 자동으로 만드는 create() 함수 기능을 인터페이스로 분리해 지정해서 사용할 수 있도록 변경
- Lotto에 setCustomLotto()와 setCreateLotto() 함수가 존재
- Lotteries class 에선 생성자에 Lotto 객체를 입력해야 함.

* feat Winner class 추가 및 지난주 우승 번호 및 보너스 번호 입력 추가

- Winner도 setCustomLotto() 함수를 사용해 초기화

* feat 수동 입력시 0 미만 체크 추가

* feat Winner class와 RankResult 추가

* refactor view 클래스들을 static으로 사용할 수 있게 변경

* feat 수익률을 %로 변경

* refact OuptputView에서 문자열 상수화

* doc README.md 정리

* refactor Lotteries class의 set부분 제거

- 로또를 생성하는 방법인 AutoCreateLotto, CustomLotto를 함수를 사용할 때 받을 수 있도록 변경

* refactor Main의 generateRank() 함수 삭제

- 코드의 양을 줄이기 위해서 generateLotteries와 하나로 합침

* refactor Winner class의 필드값들 final로 변경

* refacotr 사용하지않는 import 삭제

* feat rank 결과 순서 출력되게 변경

- HashMap -> LinkedHashMap 변경

* refactor 사용하지 않는 import 삭제

* refactor 클래스 필드 접근 영역 변경

public으로 잘못 표기되어있던 것들 private으로 변경

* style formatting

* test 테스트코드 리팩토링

* style formatting

* test LottoTest 사용하지 않는 변수 삭제

* test LottoTest 중복되는 부분 IntStream으로 변경

* refactor 인덴트를 1로 줄이기 위해 함수 분리

* refactor Lotto 상태 체크하는 부분들 함수 분리

* refactor RankResult void형 함수 줄이기

* refactor 이름변경 및 인터페이스 위치 변경

CustomLotto -> CustomCreateLotto

* test LottoNumberTest exception 테스트에서 저수준 예외로 변경

- Exception -> IllegalAr

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="/css/index.css" rel="stylesheet" type="text/css"/>
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+    <div>서비스를 선택하세요</div>
+    <button type="button" onclick="location.href='/showhistory'">조회하기</button>
+    <button type="button" onclick="location.href='/makelotto'">로또 구매하기</button>
 </body>
 </html>
