merge: www 브랜치 병합
미리 만들어둔 템플릿.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <title>Lotto Generator</title>
+    <link rel="stylesheet" href="./statics/css/lotto.css">
 </head>
+
 <body>
-Hello World!!
+    <div id="headline">
+        <h1>답은 "로또"다.</h1>
+    </div>
+    <div id="controls">
+        <button id="generate" type="button">가즈아ㅏㅏ</button>
+    </div>
+    <div id="container">
+    </div>
+    <script src="./statics/js/lotto.js"></script>
 </body>
+
 </html>
