--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,12 +29,12 @@
         </div>
     </form>
     <h2 class="mt-5 text-center font-weight-bold">회차별 통계</h2>
+    {{#rounds}}
     <form action="/result?round=">
-        {{#rounds}}
-        <input type="hidden" value="{{this}}" name="round">
+        <input type="hidden" value={{this}} name="round">
         <button type="submit" class="btn btn-outline-secondary mr-2">{{this}}회</button>
-        {{/rounds}}
     </form>
+    {{/rounds}}
     {{#message}}
     <div class="form-control text-center">{{message}}</div>
     {{/message}}
