--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,7 +18,13 @@
 	통계<br>
 	{{#statistics}}
 		
-		{{result}}<br>
+		6개 일치 (2000000000원) - {{firstCount}}개<br>
+		5개 일치, 보너스볼 일치 (30000000원) - {{secondCount}}개<br>
+		5개 일치 (1500000원) - {{thirdCount}}<br>
+		4개 일치 (50000원) - {{fourthCount}}<br>
+		3개 일치 (5000원) - {{fifthCount}}<br>
+		3개 이하 일치 (0원) - {{missCount}}개<br>
+		
 		수익율 : {{returnOfRate}}
 	{{/statistics}}
 
