[REVIEW] Separate message logic from controller to view

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
 
 <script>
     var i = 0;
-    var txt = "{{{ message }}}";
+    var txt = "안녕하세요! 로또를 구매하시겠습니까? 로또 결과를 조회하시겠습니까?";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
