--- a/src/main/resources/templates/inputmanualnumbers.html
+++ b/src/main/resources/templates/inputmanualnumbers.html
@@ -23,7 +23,7 @@
 
 <script>
     var i = 0;
-    var txt = "{{{ message }}}";
+    var txt = "수동 로또 번호들을 입력해주세요. {{ quantity }}장 산다고 했으니 {{ quantity }}번 입력해야겠죠?";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
