--- a/src/main/resources/templates/inputmanualquantity.html
+++ b/src/main/resources/templates/inputmanualquantity.html
@@ -21,7 +21,7 @@
 
 <script>
     var i = 0;
-    var txt = "{{{ message }}}";
+    var txt = "총 {{ totalQuantity }}장의 로또를 구매할 수 있습니다. 이 중 수동으로 구매할 로또의 수를 입력해주세요.";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
