--- a/src/main/resources/templates/inputwinningnumbers.html
+++ b/src/main/resources/templates/inputwinningnumbers.html
@@ -32,7 +32,8 @@
 
 <script>
     var i = 0;
-    var txt = "{{{ message }}}";
+    var txt = "수동으로 {{ manualQuantity }}개, 자동으로 {{ autoQuantity }}개를 구매했습니다." +
+              "이번주 당첨 번호와 보너스 볼을 입력해주세요. 결과를 알려드릴게요!";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
