--- a/src/main/resources/templates/lookupresult.html
+++ b/src/main/resources/templates/lookupresult.html
@@ -21,7 +21,7 @@
 
 <script>
     var i = 0;
-    var txt = "{{{ message }}}";
+    var txt = "조회하고 싶은 회차를 입력해주세요. 현재 최대 {{ maxRound }}회차까지 진행되었습니다.";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
