--- a/src/main/resources/templates/paymoney.html
+++ b/src/main/resources/templates/paymoney.html
@@ -21,7 +21,7 @@
 
     <script>
         var i = 0;
-        var txt = "{{{ message }}}";
+        var txt = "{{ round }}회차 로또 판매중입니다. 구입할 금액을 입력해주세요!";
         var speed = 50; /* The speed/duration of the effect in milliseconds */
 
         function typeWriter() {
