--- a/src/main/resources/templates/reportresult.html
+++ b/src/main/resources/templates/reportresult.html
@@ -33,7 +33,7 @@
 
 <script>
     var i = 0;
-    var txt = "{{{ message }}}";
+    var txt = "두구두구두구... 당신의 당첨 결과는??";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
