Refactor: fixed a bug

--- a/src/main/resources/templates/showLottoResult.html
+++ b/src/main/resources/templates/showLottoResult.html
@@ -15,9 +15,9 @@
         <button type="submit" class="btn btn-primary" style="width:100px; margin-top:5%; margin-left: 80%">돌아가기</button>
     </form>
     <div style="font-size:20pt; position:absolute; top:30%; left:40%; margin:-50px 0 0 -50px; font-weight: bold;">
-        {{{matchedResult}}}
-        <br/>
-        총 수익률을 {{earningRate}}% 입니다.
+        {{{ranks}}}
+        {{{earningRate}}}
+        {{{sum}}}
     </div>
 
 </fieldset>
