[로또 - 웹, DB] 제이 미션 제출합니다. (#71)
* docs: Update README

* refactor: Rearrange package structure

* feat: Define single Lotto Number

Valid number range between 1 and 45

* feat: Define purchase money

Consider minimum initialization value as 1000

* feat: Define Lotto class

Check valid lotto composition number

* feat: Parsing user lotto input to Lotto object

Add equals and hashcode in Lotto.
Update Input view

* docs: Update README

Need to extract abstraction of generating lotto number

* feat: Define Intended Lotto Generator

Use in test code and getting user winning lotto in production code

* refactor: Change reference type to interface

* refactor: Add static keyword which has been omitted in LottoNumber

* feat: Add getting lotto purchase available amount

* test: Random lotto size test

* feat: Define random lotto generator implementing Lotto Generator

* feat: Add Lotto Service , create Lotto buy list

Attach to input view

* feat: Define output view

* fix: Implement comparable to Lotto to sorting each lotto number in lotto

* fix: Add trimming in making winning lotto

* style: Polish lines

minor change - test input params

* feat: Define winning lotto

* fix: Change number regex

Add bonus ball test

* feat: Add matching lotto result with last week won lotto

Add condition for second place

* fix: Add return value which has been omitted

* fix: Lotto number regex

* feat: Add output view with rank

* refactor: Remove redundant lines with stream initializing map

* feat: Add lotto profit ratio to Output view

Refactor output view
Polish lines

* docs: Update README

* feat: Add manual lotto buy process

* fix: Refactor money type to double

* fix: Check not enough money when getting into auto buy lotto process

* refactor: Extract long method in Lotto Service

Polish lines

* refactor: Change comparing method in Rank

* style: Polish lines

* refactor: Extract met

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,14 @@
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+<form action="/play" method="get">
+    로또구매
+    <input type="submit" value="로또구매"/>
+</form>
+<form action="/history" method="get">
+    로또 회차 조회
+    <input type="text" name="history"/>
+    <input type="submit" value="회차조회"/>
+</form>
 </body>
 </html>
