--- a/src/main/resources/templates/lotto_result.html
+++ b/src/main/resources/templates/lotto_result.html
@@ -19,9 +19,10 @@
 
         <hr class="my-4">
 
+        {{#result}}
         <div class="container">
             <div class="mb-2">
-                <h4>{{week}}주차 당첨 로또 번호</h4>
+                <h4>{{winningLottoId}}주차 당첨 로또 번호</h4>
                 <small class="text-muted">
                     로또 번호
                 </small>
@@ -41,18 +42,19 @@
             <hr class="my-3">
 
             <h4>당첨 통계</h4>
-            {{#results}}
+            {{#ranks}}
             <div class="mb-2">
                 <p>{{this}}</p>
             </div>
-            {{/results}}
+            {{/ranks}}
             <div class="mb-2">
                 <p class="h5">구매 금액: {{money}}원, 총 수익금: {{profit}}원</p>
             </div>
             <div class="mb-2">
-                <p class="h5">총 수익률은 {{incoming_rate}}%입니다.</p>
+                <p class="h5">총 수익률은 {{incomingRate}}%입니다.</p>
             </div>
         </div>
+        {{/result}}
 
         <div class="col-auto mt-4 text-center">
             <a class="btn btn-outline-secondary" href="/win/select">다른 주차 당첨 확인하기</a>
