[로또 - 웹, DB] 이바 미션 제출합니다. (#65)
* docs : 기능 구현 목록 갱신

* docs : 기능 구현 목록 갱신

* refactor : LottoFactory 클래스의 createLottos 메소드의 반환 타입 변경

1. 반환 타입을 Lottos에서 List<Lotto>로 변경한다
- 반환 타입을 Lottos로 하게됐을 경우 Lottos 타입으로 한정정이게 된다.
이를 List<> 타입으로 변경함으로써 사용될 수 있는 경우를 늘려 유연하게 만든다.

* feat : 자 / 수동으로 생성된 로또 번호 리스트를 해당 회차 정보와 저장하는 DAO 구현

* refactor : LottoFactory 클래스의 createLottos 메소드의 반환 타입 변경으로 인한 테스트 코드 수정

* refactor : DAO 클래스에 try-with-resources 로직 적용

* refactor : 데이터베이스 연결 클래스 따로 분리

* feat : Round 를 관리하는 테이블 추가 및 DAO 구현

1. round 테이블은PK로 round를 가지며 round별 구입 금액(amount) 칼럼을 둬서 데이터를 저장한다
2. lotto / winning_lotto 테이블은 round 테이블의 round 값을 가지고 해당 회차 정보임을 저장하고 확인한다

* feat : winning_lotto 테이블 추가 및 DAO 구현

1. winning_lotto 테이블은 당첨 번호, 보너스 번호, 라운드 정보를 저장한다
2. 당첨 번호, 보너스 번호를 찾는 메서드를 따로 구분한다
- 뷰에서 당첨 번호와 보너스 번호를 따로 전달 받고 이 둘의 검색 결과를 가지고 WinningLotto 객체를 만들기 위해

* feat : StringUtil commons lang 라이브러리 추가

* docs : 기능 구현 목록 갱신

* feat : 내림 차순으로 round를 모두 출력하는 기능 추가

* refactor : Controller로 로직을 분리하고 코드 간소화

* feat : 입력 받은 로또 번호를 바탕으로 로또 리스트 생성

1. Controller는 view에서 입력 받은 인자를 바로 LottoService를 호출하면서 넘겨준다
2. LottoService를 통해 Controller의 복잡한 로직을 분리한다
3. LottosDTO를 가지고 해당 기능에 따른 view 에서 필요한 데이터를 담은 클래스를 생성하고 반환한다

* feat : round를 생성하고 굼액을 저장하는 기능 추가

1. RoundController를 가지고 view에서 넘어온 인자를 service에게 넘겨준다
2. RoundService 에서 넘겨받은 인자를 바탕으로 구매금액 저장, 전체 라운드 내림차순 검색,
라운드 최대값 검색 기능을 구현한다

* feat : 당첨 번호를 저장, 당첨 결과를 계산하고 결과를 반환하는 기능 추가

1. Controller는 view에서 넘어온 인자를 바로 service에게 넘겨준다
2. WinningLottoService는 넘겨받은 인자를 가지고 당첨 번호 저장, 당첨 결과 계산하는 기능을 구현한다
3. 저장된 당첨 번호를 나타내는 WinningLottoDTO 객체를 생성하여 반환한다
4. 계산된 당첨 결과를 나타내는 WinningResultDTO 객체를 생성하여 반환한다

* feat : 수동 로또, 당첨 번호 로또를 생성시 view에서 입력받는 문자열을 list 바꾸는 중복 로직을 따로 분리

* feat : 로또 구매를 입력받는 view 구현

* feat : 로또 구매 개수를 출력하고 수동 구매 개수, 번호를 입력받는 view 구현

* feat : 로또 번호 리스트를 출력하고 당첨 번호, 보너스 번호를 입력받는 view 구현

* 당첨 번호, 보너스 번호를 출력하고 회차를 선택하여 결과를 조회할 수 있는 view 구현

* feat : 선택된 회차의 결과를 출력하는 view 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,13 @@
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+<div id="center">
+    <h2>{{newRound}}회 로또</h2>
+    <form action="/amount">
+        구입 금액을 입력하세요.<br/>
+        <input type="text" name="amount" placeholder="1,000~100,000원 사이"> 원<br/><br/>
+        <input type="submit" value="입력">
+    </form>
+</div>
 </body>
 </html>
