refactor: template 수정
lotto.js 수정.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,12 @@
         <h1>답은 "로또"다.</h1>
     </div>
     <div id="controls">
-        <button id="generate" type="button">가즈아ㅏㅏ</button>
+        <div id="user-input">
+            <input type="number" name="money" id="money" placeholder="구입금액">
+            <input type="number" name="manual" id="manual" placeholder="수동구매">
+        </div>
+        <button id="generate" type="button">가즈아</button>
+        <button id="winning" type="button" style="visibility: hidden;">주작기</button>
     </div>
     <div id="container">
     </div>
