--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Document</title>
 </head>
 
 <body>
-    <div id="container">
+<div id="container">
 
-    </div>
+</div>
 </body>
 
 </html>
