--- a/src/main/resources/templates/lotto.html
+++ b/src/main/resources/templates/lotto.html
@@ -5,28 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link type="stylesheet" href="./statics/css/lotto.css">
     <title>Document</title>
 </head>
-
 <body>
     <div id="container">
         <div class="position floatfix">
-            <div id="metaData">
-                <table>
-                    <thead>
-                        <tr>
-                            <td>구입금액</td>
-                            <td>수동로또</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td id="lottoMoney">{{money}}</td>
-                            <td id="manualCount">{{manual}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
             <div id="history">
             </div>
             <div id="side-right">
