add : 로또 웹 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,9 @@
     </div>
 </div>
 
+<div>
+    <a href="./lottoRound">로또 회차 목록으로 이동</a>
+</div>
 <!-- script -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="./js/purchase.js"></script>
