--- a/src/main/resources/templates/winning.html
+++ b/src/main/resources/templates/winning.html
@@ -12,7 +12,9 @@
 {{/purchaseCount}}
 
 {{#lottoGroup}}
-    {{lottoNumbers}}<br/>
+    {{#lottos}}
+        {{lottoNumbers}}<br/>
+    {{/lottos}}
 {{/lottoGroup}}
 
 <div>
