re merge request

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ori<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -30,7 +30,6 @@
         }
         return e
     }
-
     var t = {}, p = {1: 0}, c = [];
 
     function f(e) {
