[로또 - 웹, DB] 쉐이크반 미션 제출합니다. (#73)
* docs : 1단계 기능 구현 목록 작성

* feat : LottoNumber 객체 생성

 1. 1~45개의 LottoNumber인스턴스 객체를 가지고 있는 클래스 생성

* feat : 로또 생성 기능 구현

* refactor : LottoNumber객체 리팩토링

* feat : 구입한 금액에 맞게 로또를 생성하는 기능 구현

* feat : 구입금액을 입력받고 로또생성하여 출력하는 기능 구현

* feat : 당첨 번호를 입력받는 기능 구현

* feat : 당첨 결과를 알려주는 Enum객체 생성

* feat : 당첨 결과를 저장하고 있는 객체 생성

* feat : 당첨 통계를 알려주는 기능 구현

* docs : 2단계 기능 구현 목록 작성

* feat : 보너스 볼을 입력받아 저장하는 기능 구현

* refactor : 메소드 이름 변경

* feat : 2등 계산 기능 및 출력 기능 추가

* docs : 3단계 기능 구현 목록 작성

* refactor : 수동과 자동을 만들어주는 Generator 분리

* refactor : WinningLotto 클래스 리팩토링

* refactor : LottoResult 리팩토링

* feat : 금액을 저장 및 검증하는 Money 클래스 생성

* feat : 수동 로또를 입력 받아 생성하는 기능 구현

* refactor : 일부 출력 메세지 리팩토링

* refactor : Main Controller 리팩토링

 1. void 메소드에 대한 재귀 호출 변경

* refactor : if문 분기 조건 변경

* refactor : exception 관련 피드백 반영

 1. exception 클래스 패키지 변경
 2. Exception 발생 위치 변경

* refactor : 조건문 피드백 반영

 1. not(!)을 붙이는 것 대신 조건문의 내용을 바꿈

* refactor : Controller 재귀 로직 변경

 1. 기존 재귀함수에서 반복문으로 변경
 2. 예외에 대한 모든 catch는 도메인에서 실시

* refactor : View 및 LottoGenerator 피드백 반영

 1. Model에서 View를 만들어주는 것이 아닌 필요한 데이터를 넘기는 방식으로 변경
 2. Auto와 Manual Generator를 하나의 클래스로 합침

* refactor : LottoResultGenerator 삭제

 1. LottoResultGenerator는 한번만 사용 되기 때문에 별도로 빼지 않고
    LottoResult클래스 안의 generate메소드로 대체

* refactor : LottoTickets 객체 수정

 1. LottoTickets 객체를 일급 컬렉션으로 변경

* refactor : Model,View 역할 분리

 1. View와 Model의 역할을 좀 더 명확하게 분리
 2. 자바 컨벤션 준수

* refactor : LottoGenerator 분리

 1. Auto와 Manual을 분리
 2. Manual에 대한 테스트 코드 작성

* refactor : 정적 팩토리 메소드 리팩토링

 1. 정적 팩토리 메소드에서 null을 리턴하지 않고
    정확한 값이 들어갔는지 확인하는 로직을 추가

* refactor : 테스트 코드 작성 및 Exception 위치 변경

* refactor : LottoResult 리팩토링

 1. LottoResultGenerator 생성

* refactor : try-catch 및 View에 대한 반복 로직 변경

 1. 기존 Model에서 실시하던 try-catch를 controller에서 실시
 2. Optional을 사용하여 반복문을 실행

* feat : 로또 구매 기능 프론트 구현

* refactor : 불필요 파일 

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <title>로또 게임</title>
 </head>
 <body>
-Hello World!!
+<h1>메인 페이지 입력</h1>
+<form action="lottogame/money" method="post">
+    <input type="submit" value="로또 구입">
+</form>
+<form action="winninglotto/create">
+    <input type="submit" value="당첨 번호 입력">
+</form>
+<form action="/showhistory/selectround">
+    <input type="submit" value="이전 기록 보기">
+</form>
+<div class="hello"></div>
 </body>
 </html>
